layout buggs sorting

--- a/austinePortfolio/src/Components/Sidebar/index.scss
+++ b/austinePortfolio/src/Components/Sidebar/index.scss
@@ -124,6 +124,10 @@ $primary-color: #ffd700 !default;
     .mobile-show {
       width: 100vw !important;
       position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
       z-index: 100000 !important;
   
     }
